平成22年1回目の結果を記録

--- a/html/terms.html
+++ b/html/terms.html
@@ -316,6 +316,19 @@
                     </div>
                 </div>
             </div>
+            <div class="accordion-item" id="h_FDDI">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#FDDI" aria-expanded="false" aria-controls="FDDI">
+                        FDDI(Fiber Distributed Data Interface)
+                    </button>
+                </h2>
+                <div id="FDDI" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        光ファイバーを通信媒体に使用し、2,000mまでの距離で最大100Mbpsの通信を行うLANの規格の1つ。伝送制御にトークンリング(IEEE 802.5)と同じ
+                        トークンパッシング方式が使用され、リング型のネットワークトポロジーで構成されることが特徴(スター型も可能)。
+                    </div>
+                </div>
+            </div>
             <div class="accordion-item" id="h_GARP">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#GARP" aria-expanded="false" aria-controls="GARP">
