--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -87,7 +87,7 @@
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_LSA">LSA</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -105,7 +105,7 @@
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -123,7 +123,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -141,7 +141,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -159,7 +159,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_FDDI">FDDI</a></td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -177,7 +177,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -195,7 +195,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_ハミング符号">ハミング<br>符号</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -213,7 +213,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -231,7 +231,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -249,7 +249,7 @@
                         <td class="p-1"><a href="html/terms.html#h_PPP">PPP</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -267,7 +267,7 @@
                         <td class="p-1"><a href="html/terms.html#h_RARP">RARP</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -285,7 +285,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -303,7 +303,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -321,7 +321,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_ルートリフレクション">ルート<br>リフレクション</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -339,7 +339,7 @@
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -357,7 +357,7 @@
                         <td class="p-1"><a href="html/terms.html#h_OP25B">OP25B</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -375,7 +375,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -393,7 +393,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -411,7 +411,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -429,7 +429,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_WPA2">WPA2</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -447,7 +447,7 @@
                         <td class="p-1"><a href="html/terms.html#h_パイプライン処理">パイプライン<br>処理</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -465,7 +465,7 @@
                         <td class="p-1"><a href="html/terms.html#h_SAN">SAN</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -483,7 +483,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
@@ -501,25 +501,25 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_MDA">MDA</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                     </tr>
                     <tr>
                         <th class="p-1">正解率</th>
                         <td class="p-1">64%</td>
                         <td class="p-1">64%</td>
-                        <td class="p-1">80%</td>
+                        <td class="p-1 text-success">80%</td>
                         <td class="p-1">76%</td>
-                        <td class="p-1">80%</td>
-                        <td class="p-1">92%</td>
-                        <td class="p-1">84%</td>
-                        <td class="p-1">92%</td>
-                        <td class="p-1">84%</td>
-                        <td class="p-1">84%</td>
+                        <td class="p-1 text-success">80%</td>
+                        <td class="p-1 text-success">92%</td>
+                        <td class="p-1 text-success">84%</td>
+                        <td class="p-1 text-success">92%</td>
+                        <td class="p-1 text-success">84%</td>
+                        <td class="p-1 text-success">84%</td>
                         <td class="p-1">64%</td>
-                        <td class="p-1">84%</td>
-                        <td class="p-1">80%</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1 text-success">84%</td>
+                        <td class="p-1 text-success">80%</td>
+                        <td class="p-1">76%</td>
                         <td class="p-1">-</td>
                     </tr>
                 </tbody>
