平成21年1回目の結果を記録

--- a/html/terms.html
+++ b/html/terms.html
@@ -1152,6 +1152,19 @@
                     </div>
                 </div>
             </div>
+            <div class="accordion-item" id="h_認証VLAN">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#認証VLAN" aria-expanded="false" aria-controls="認証VLAN">
+                        認証VLAN
+                    </button>
+                </h2>
+                <div id="認証VLAN" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        VLANの方式の1つでネットワーク接続前に「MACアドレス認証」「ID + パスワードによる認証」「IEEE 802.1x」などでユーザーを特定し、ユーザーことに所属すべきVLANに
+                        振り分けることで端末のグルーピングを行う技術。これにより接続ポート単位やアドレス単位というグルーピングができない無線アクセスポイントへの接続でもVLANに対応させることができる。
+                    </div>
+                </div>
+            </div>
             <div class="accordion-item" id="h_パイプライン処理">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#パイプライン処理" aria-expanded="false" aria-controls="パイプライン処理">
