--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問2</th>
@@ -88,7 +88,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_LSA">LSA</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                     </tr>
                     <tr>
                         <th class="p-1">問3</th>
@@ -106,7 +106,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問4</th>
@@ -124,7 +124,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問5</th>
@@ -142,7 +142,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問6</th>
@@ -160,7 +160,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_FDDI">FDDI</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問7</th>
@@ -178,7 +178,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問8</th>
@@ -196,7 +196,7 @@
                         <td class="p-1"><a href="html/terms.html#h_ハミング符号">ハミング<br>符号</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問9</th>
@@ -214,7 +214,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                     </tr>
                     <tr>
                         <th class="p-1">問10</th>
@@ -232,7 +232,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問11</th>
@@ -250,7 +250,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問12</th>
@@ -268,7 +268,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問13</th>
@@ -286,7 +286,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問14</th>
@@ -304,7 +304,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問15</th>
@@ -322,7 +322,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_ルートリフレクション">ルート<br>リフレクション</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問16</th>
@@ -340,7 +340,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問17</th>
@@ -358,7 +358,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問18</th>
@@ -376,7 +376,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問19</th>
@@ -394,7 +394,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問20</th>
@@ -412,7 +412,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問21</th>
@@ -430,7 +430,7 @@
                         <td class="p-1"><a href="html/terms.html#h_WPA2">WPA2</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_認証VLAN">認証VLAN</a></td>
                     </tr>
                     <tr>
                         <th class="p-1">問22</th>
@@ -448,7 +448,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                     </tr>
                     <tr>
                         <th class="p-1">問23</th>
@@ -466,7 +466,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問24</th>
@@ -484,7 +484,7 @@
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">問25</th>
@@ -502,7 +502,7 @@
                         <td class="p-1"><a href="html/terms.html#h_MDA">MDA</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                     </tr>
                     <tr>
                         <th class="p-1">正解率</th>
@@ -520,7 +520,7 @@
                         <td class="p-1 text-success">84%</td>
                         <td class="p-1 text-success">80%</td>
                         <td class="p-1">76%</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1 text-success">84%</td>
                     </tr>
                 </tbody>
             </table>
