--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <tr>
               <th class="p-1">問2</th>
               <td class="p-1">⚪︎</td>
-              <td class="p-1"><a href="html/terms.html#h_OFDM">OFDM</a></td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">×</td>
@@ -107,7 +107,7 @@
             <tr>
               <th class="p-1">問3</th>
               <td class="p-1">⚪︎</td>
-              <td class="p-1"><a href="html/terms.html#h_OSPF">OSPF</a></td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -157,7 +157,7 @@
                   >スパニングツリー<br />プロトコル</a
                 >
               </td>
-              <td class="p-1"><a href="html/terms.html#h_MTU">MTU</a></td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -201,7 +201,7 @@
             <tr>
               <th class="p-1">問7</th>
               <td class="p-1">⚪︎</td>
-              <td class="p-1"><a href="html/terms.html#h_BGP">BGP</a></td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1"><a href="html/terms.html#h_IGMP">IGMP</a></td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -281,9 +281,7 @@
             <tr>
               <th class="p-1">問11</th>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">
-                <a href="html/terms.html#h_VLANタグ">VLANタグ</a>
-              </td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1"><a href="html/terms.html#h_MPLS">MPLS</a></td>
               <td class="p-1">⚪︎</td>
@@ -471,9 +469,7 @@
             <tr>
               <th class="p-1">問21</th>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">
-                <a href="html/terms.html#h_IEEE802.1X">IEEE802.1X</a>
-              </td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">
                 <a href="html/terms.html#h_DNSリフレクタ攻撃"
                   >DNSリフレクタ<br />攻撃</a
@@ -529,7 +525,7 @@
             <tr>
               <th class="p-1">問23</th>
               <td class="p-1">⚪︎</td>
-              <td class="p-1"><a href="html/terms.html#h_FaaS">FaaS</a></td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">
                 <a href="html/terms.html#h_待ち行列モデル"
@@ -587,7 +583,7 @@
             <tr>
               <th class="p-1">正解率</th>
               <td class="p-1 text-success">92%</td>
-              <td class="p-1">64%</td>
+              <td class="p-1 text-success">96%</td>
               <td class="p-1 text-success">80%</td>
               <td class="p-1">76%</td>
               <td class="p-1 text-success">80%</td>
