令和4年2回目の結果を記録

--- a/index.html
+++ b/index.html
@@ -126,11 +126,7 @@
               <th class="p-1">問4</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">
-                <a href="html/terms.html#h_スパニングツリープロトコル"
-                  >スパニングツリー<br />プロトコル</a
-                >
-              </td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">×</td>
               <td class="p-1">
                 <a href="html/terms.html#h_スパニングツリープロトコル"
@@ -202,7 +198,7 @@
               <th class="p-1">問7</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1"><a href="html/terms.html#h_IGMP">IGMP</a></td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -336,7 +332,7 @@
               <th class="p-1">問14</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1"><a href="html/terms.html#h_RMON">RMON</a></td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -470,11 +466,7 @@
               <th class="p-1">問21</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">
-                <a href="html/terms.html#h_DNSリフレクタ攻撃"
-                  >DNSリフレクタ<br />攻撃</a
-                >
-              </td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -494,11 +486,7 @@
               <th class="p-1">問22</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">
-                <a href="html/terms.html#h_量子アニーリング方式"
-                  >量子アニーリング<br />方式</a
-                >
-              </td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">×</td>
               <td class="p-1">
@@ -584,7 +572,7 @@
               <th class="p-1">正解率</th>
               <td class="p-1 text-success">92%</td>
               <td class="p-1 text-success">96%</td>
-              <td class="p-1 text-success">80%</td>
+              <td class="p-1 text-success">100%</td>
               <td class="p-1">76%</td>
               <td class="p-1 text-success">80%</td>
               <td class="p-1 text-success">92%</td>
