令和3年2回目の結果を記録

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">×</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">
                 <a href="html/terms.html#h_スパニングツリープロトコル"
                   >スパニングツリー<br />プロトコル</a
@@ -239,11 +239,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">
-                <a href="html/terms.html#h_DNSラウンドロビン"
-                  >DNSラウンド<br />ロビン</a
-                >
-              </td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -279,7 +275,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1"><a href="html/terms.html#h_MPLS">MPLS</a></td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -515,11 +511,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">
-                <a href="html/terms.html#h_待ち行列モデル"
-                  >待ち行列<br />モデル</a
-                >
-              </td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -573,7 +565,7 @@
               <td class="p-1 text-success">92%</td>
               <td class="p-1 text-success">96%</td>
               <td class="p-1 text-success">100%</td>
-              <td class="p-1">76%</td>
+              <td class="p-1 text-success">92%</td>
               <td class="p-1 text-success">80%</td>
               <td class="p-1 text-success">92%</td>
               <td class="p-1 text-success">84%</td>
