令和元年2回目の結果を記録

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1"><a href="html/terms.html#h_IPSec">IPSec</a></td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1"><a href="html/terms.html#h_ZigBee">ZigBee</a></td>
               <td class="p-1">⚪︎</td>
@@ -92,7 +92,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">×</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -128,11 +128,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">
-                <a href="html/terms.html#h_スパニングツリープロトコル"
-                  >スパニングツリー<br />プロトコル</a
-                >
-              </td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">
                 <a href="html/terms.html#h_VLAN_ID">VLAN ID</a>
@@ -294,7 +290,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1"><a href="html/terms.html#h_MQTT">MQTT</a></td>
-              <td class="p-1">⚪︎</td>
+              <td class="p-1"><a href="html/terms.html#h_SDN">SDN</a></td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -484,7 +480,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">×</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">
                 <a href="html/terms.html#h_NICチーミング">NICチーミング</a>
               </td>
@@ -566,7 +562,7 @@
               <td class="p-1 text-success">96%</td>
               <td class="p-1 text-success">100%</td>
               <td class="p-1 text-success">92%</td>
-              <td class="p-1 text-success">80%</td>
+              <td class="p-1 text-success">92%</td>
               <td class="p-1 text-success">92%</td>
               <td class="p-1 text-success">84%</td>
               <td class="p-1 text-success">92%</td>
