平成30年2回目の結果を記録

--- a/html/terms.html
+++ b/html/terms.html
@@ -762,6 +762,7 @@
           <div id="LDAP" class="accordion-collapse collapse">
             <div class="accordion-body">
               ユーザー名やパスワードなどのユーザー情報やネットワーク資源情報を一元管理するとともにそれらの情報を提供するディレクトリサービスにアクセスするためのプロトコル。
+              ディレクトリ情報ツリーの構造とデータ型、命名規則、ディレクトリ情報ツリーへのアクセス手順を規定している。通信はTCPで行う。
             </div>
           </div>
         </div>
