--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">⚪︎</td>
+              <td class="p-1">×</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1"><a href="html/terms.html#h_GARP">GARP</a></td>
               <td class="p-1">
@@ -237,7 +237,9 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">⚪︎</td>
+              <td class="p-1">
+                <a href="html/terms.html#h_LDAP">LDAP</a>
+              </td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -563,7 +565,7 @@
               <td class="p-1 text-success">100%</td>
               <td class="p-1 text-success">92%</td>
               <td class="p-1 text-success">92%</td>
-              <td class="p-1 text-success">92%</td>
+              <td class="p-1 text-success">84%</td>
               <td class="p-1 text-success">84%</td>
               <td class="p-1 text-success">92%</td>
               <td class="p-1 text-success">84%</td>
