平成29年2回目の結果を記録

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1"><a href="html/terms.html#h_ZigBee">ZigBee</a></td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">
                 <a href="html/terms.html#h_NSレコード">NSレコード</a>
@@ -130,9 +130,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">
-                <a href="html/terms.html#h_VLAN_ID">VLAN ID</a>
-              </td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -154,11 +152,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">
-                <a href="html/terms.html#h_スパニングツリープロトコル"
-                  >スパニングツリー<br />プロトコル</a
-                >
-              </td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -176,7 +170,9 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">×</td>
-              <td class="p-1">⚪︎</td>
+              <td class="p-1">
+                <a href="html/terms.html#h_MXレコード">MXレコード</a>
+              </td>
               <td class="p-1"><a href="html/terms.html#h_GARP">GARP</a></td>
               <td class="p-1">
                 <a href="html/terms.html#h_フラグシーケンス"
@@ -218,7 +214,9 @@
                 <a href="html/terms.html#h_NSレコード">NSレコード</a>
               </td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">⚪︎</td>
+              <td class="p-1">
+                <a href="html/terms.html#h_IPv6">IPv6</a>
+              </td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -428,7 +426,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1"><a href="html/terms.html#h_DNSSEC">DNSSEC</a></td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -566,7 +564,7 @@
               <td class="p-1 text-success">92%</td>
               <td class="p-1 text-success">92%</td>
               <td class="p-1 text-success">84%</td>
-              <td class="p-1 text-success">84%</td>
+              <td class="p-1 text-success">92%</td>
               <td class="p-1 text-success">92%</td>
               <td class="p-1 text-success">84%</td>
               <td class="p-1 text-success">84%</td>
