--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">⚪︎</td>
+              <td class="p-1">×</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">×</td>
               <td class="p-1">⚪︎</td>
@@ -565,7 +565,7 @@
               <td class="p-1 text-success">92%</td>
               <td class="p-1 text-success">84%</td>
               <td class="p-1 text-success">92%</td>
-              <td class="p-1 text-success">92%</td>
+              <td class="p-1 text-success">88%</td>
               <td class="p-1 text-success">84%</td>
               <td class="p-1 text-success">84%</td>
               <td class="p-1">64%</td>
